<resources>
    <string name="app_name">Urban Problems</string>
    <string name="title_activity_maps">Map</string>

    <string name="title_splashscreen">Initial Screen</string>
    <string name="title_main">Urban Problems</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Password</string>
    <string name="button_signin">Sign In</string>
    <string name="button_signup">Sign Up</string>

    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_myprofile">My profile</string>
    <string name="nav_about">About the App</string>
    <string name="nav_logout">Logout</string>
    <string name="button_go_to_signup">Don\'t have an account? Sign Up</string>
    <string name="title_signin">Sign In</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_confirm_password">Confirm password</string>
    <string name="button_back">Back</string>
    <string name="title_signup">Sign Up</string>
    <string name="dialog_progress_title">Wait...</string>
    <string name="dialog_action_yes">Yes</string>
    <string name="dialog_action_no">No</string>
    <string name="dialog_action_cancel">Cancel</string>
    <string name="message_input_email">Input your E-mail</string>
    <string name="message_input_password">Input your password</string>
    <string name="message_input_name">Input your fullname</string>
    <string name="message_signup_success">Registration successfully completed</string>
    <string name="message_password_not_confirmed">Password confirmation is invalid</string>
    <string name="nav_problems_location">Problems location</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>
    <string name="message_signin_success">You\'re welcome</string>
    <string name="hint_date_creation">Registration date</string>
    <string name="title_select_action">Selection action</string>
    <string name="option_select_from_gallery">Select photo from gallery</string>
    <string name="option_take_a_picture">Capture photo from camera</string>
    <string name="info_upload_image_profile_succeded">Image profile uploaded with success</string>
    <string name="hint_title">Title</string>
    <string name="hint_detail">Detail</string>
    <string name="hint_location">Location</string>
    <string name="message_input_title">Input a title</string>
    <string name="message_input_detail">Input detail</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>
    <string name="title_activity_map_problems">Map</string>
    <string name="info_upload_image_problem_succeded">Image problem uploaded with success</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="nav_util_telephones">Useful telephone numbers</string>
    <string name="error_sign_in">E-mail/password not register or invalid</string>
    <string name="error_get_by_id">There was an error retrieving user data</string>
    <string name="error_sign_up">There was an error registering user</string>
    <string name="error_get_by_email">There was an error verifying email</string>
    <string name="check_keep_connected">Keep connected</string>
    <string name="message_hi_again">Hi! Welcome back again!</string>
    <string name="message_user_already_exists">E-mail already used in another register</string>
    <string name="message_error_save_data">Error saving user data</string>
    <string name="message_input_short_password">Password must have at least 8 characters</string>
    <string name="message_save_problem_success">Saved successfully</string>
    <string name="action_camera">Camera</string>
    <string name="message_profile_updated_success">Data saved successfully</string>
    <string name="title_report_problem">Report a urban problem</string>
    <string name="message_confirmation">Confirmation</string>
    <string name="message_ask_logout">Confirm that you want to exit?</string>
    <string name="message_confirm_delete_problem">Confirm that you want to delete this problem?</string>
    <string name="message_delete_success">Deleted successfully</string>
    <string name="useful_ambulance">First-Aid Ambulance</string>
    <string name="useful_police">Police</string>
    <string name="useful_fire">Fire Department</string>
    <string name="useful_traffic">Traffic emergency</string>
    <string name="useful_subway">Subway</string>
    <string name="useful_bus">Bus</string>
    <string name="message_confirm_calling">Confirm the phone call to</string>
    <string name="message_not_permission_calling">Application without permission to make phone call</string>
    <string name="message_confirm_save_problem">Confirm saving data?</string>
    <string name="message_get_location">Get location? Click the icon below</string>
    <string name="message_pick_location">Tap pick location to get your address</string>
    <string name="button_pick_location">PICK LOCATION</string>
    <string name="message_location_not_found">Location not found</string>
    <string name="label_address">Address</string>
    <string name="label_neighborhood">Neighborhood</string>
    <string name="label_city">City</string>
    <string name="label_postalcode">Postal Code</string>
    <string name="label_state">State</string>
    <string name="message_confirm_delete_selected_problem">Confirm that you want to delete selected Urban Problems?
    </string>
    <string name="title_send_email">Send E-mail...</string>
    <string name="message_confirm_share_problem_by_whatsapp">Confirm share the problem by WhatsApp?</string>
    <string name="title_developers">Developers</string>
    <string name="message_take_picture">Capture or pick a picture from the problem you want to report</string>
    <string name="action_new">New</string>
    <string name="title_version">Version</string>
    <string name="message_deleting">Deleting</string>

</resources>
