<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.signup.SignUpActivity">

    <LinearLayout
            style="@style/lin_layout_pad_30">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/edtEmail"
                style="@style/til_normal">
            <android.support.design.widget.TextInputEditText
                    style="@style/til_normal"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="100"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/edtName"
                style="@style/til_normal">
            <android.support.design.widget.TextInputEditText
                    style="@style/til_normal"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"
                    android:maxLength="60"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/edtPassword"
                app:passwordToggleEnabled="true"
                style="@style/til_normal">
            <android.support.design.widget.TextInputEditText
                    style="@style/til_normal"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLength="20"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/edtConfirmPassword"
                app:passwordToggleEnabled="true"
                style="@style/til_normal">
            <android.support.design.widget.TextInputEditText
                    style="@style/til_normal"
                    android:hint="@string/hint_confirm_password"
                    android:inputType="textPassword"
                    android:maxLength="20"/>
        </android.support.design.widget.TextInputLayout>

        <Button android:id="@+id/btnSignUp"
                style="@style/btn_normal_transp_center"
                android:text="@string/button_signup" />

    </LinearLayout>

</ScrollView>