<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.signin.SignInActivity">

    <LinearLayout
            style="@style/lin_layout_pad_30">

        <android.support.design.widget.TextInputLayout
                android:id="@+id/edtEmail"
                style="@style/til_normal">
            <android.support.design.widget.TextInputEditText
                    style="@style/til_normal"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:maxLength="100"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/edtPassword"
                style="@style/til_normal"
                app:passwordToggleEnabled="true">
            <android.support.design.widget.TextInputEditText
                    style="@style/til_normal"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:maxLength="20"/>
        </android.support.design.widget.TextInputLayout>

        <CheckBox
                android:id="@+id/chkKeepConnected"
                style="@style/chk_mg_20"
                android:text="Manter conectado" />

        <Button android:id="@+id/btnSignIn"
                style="@style/btn_normal_transp_center"
                android:text="@string/button_signin"/>

        <Button android:id="@+id/btnSignUp"
                style="@style/btn_normal_transp_center"
                android:text="@string/button_go_to_signup"/>

    </LinearLayout>

</ScrollView>