<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.viewproblem.ViewProblemActivity">

    <LinearLayout android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="260dp"
                android:src="@drawable/no_cover_available"
                android:id="@+id/ivProblem"
                android:scaleType="fitCenter"
                android:background="#cccccc"/>


        <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_title" />

        <TextView
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:textSize="24sp"
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/hint_title"/>


        <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_detail" />

        <TextView
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="20dp"
                android:textSize="24sp"
                android:id="@+id/tvDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:text="@string/hint_detail"/>

        <TextView
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_location" />

        <android.support.v7.widget.CardView
                android:elevation="4dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="30dp"
                android:layout_below="@+id/header"
                android:id="@+id/card_view"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp">

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <RelativeLayout
                        android:minHeight="120dp"
                        android:id="@+id/rlAddress"
                        android:layout_alignParentTop="true"
                        android:padding="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            android:id="@+id/tvAddress"
                            android:text="@string/hint_location"
                            android:visibility="gone"
                            android:layout_alignParentLeft="true"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    <TextView
                            android:layout_centerInParent="true"
                            android:id="@+id/tvEmpty"
                            android:text="@string/message_location_not_found"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                </RelativeLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView>


    </LinearLayout>

</ScrollView>